[package]
name = "materialui"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "My simple Iced UI library for reusable components and colors."
repository = "https://github.com/DonnovinWiebe/MaterialUI"

[features]
plotters = ["dep:plotters"]

[dependencies]
iced = "0.14.0"
iced_font_awesome = "0.4.2"
plotters = { version = "0.3.7", optional = true }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
